--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <title>Text Utilz+ - Word counter | Character counter | Text to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard | Clear Text | Reverse Text | Extra Space | Extract numbers and text</title>
+    <title>Text Utiliz+ - Word counter | Character counter | Text to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard | Clear Text | Reverse Text | Extra Space | Extract numbers and text</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
