Added Styles and Extract Email Function

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A free online text formatter, Text Utiliz+ helps you format text online. It performs operations such as text to UpperCase, text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text and many other operations."
+      content="A free online text formatter, Text-Utility-Pro helps you format text online. It performs operations such as text to UpperCase, text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Extract Email Idand many other operations."
     />
     <meta
       name="keywords"
-      content="Text to UpperCase, Text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Clear text,UpperCase,LowerCase,capitalize,decode,encode.reverse,extra space,clipboard"
+      content="Text to UpperCase, Text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Clear text,UpperCase,LowerCase,capitalize,decode,encode.reverse,extra space,clipboard,Email id"
     />
     <!-- To add Bootstrap CSS -->
     <link
@@ -24,7 +24,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <title>Text Utiliz+ - Word counter | Character counter | Text to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard | Clear Text | Reverse Text | Extra Space | Extract numbers and text</title>
+    <title>
+      Text-Utility-Pro - Word counter | Character counter | Email Extract | Text to UpperCase |
+      Text to LowerCase | UpperCase to LowerCase | clipboard | Clear Text |
+      Reverse Text | Extra Space | Extract numbers and text
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
