--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
     <title>
-      Text-Utility-Pro - Word counter | Character counter | Email Extract | Text to UpperCase |
-      Text to LowerCase | UpperCase to LowerCase | clipboard | Clear Text |
-      Reverse Text | Extra Space | Extract numbers and text
+      Text-Utility-Pro - Word counter | Character counter | Email Extract | Text
+      to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard |
+      Clear Text | Reverse Text | Extra Space | Extract numbers and text
     </title>
   </head>
   <body>
