Added Socail Icons

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>
       Text-Utility-Pro - Word counter | Character counter | Email Extract | Text
       to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard |
-      Clear Text | Reverse Text | Extra Space | Extract numbers and text
+      Clear Text | Reverse Text | Extra Space | Extract numbers & text
     </title>
   </head>
   <body>
