Added Download Btn

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="manifest" href="site.webmanifest" />
     <script src="https://kit.fontawesome.com/38b4980054.js" crossorigin="anonymous"></script>
     <title>
-      Text-Utility-Pro - Word counter | Character counter | Email Extract | Text
+      Text-Utility-Pro - Word counter | Character counter | Email Extract | Download Text |Text
       to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard |
       Clear Text | Reverse Text | Extra Space | Extract numbers & text
     </title>
