Updated About Section

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A free online text formatter, Text-Utility-Pro helps you format text online. It performs operations such as text to UpperCase, text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Extract Email Idand many other operations."
+      content="A free online text formatter, Text-Utility-Pro helps you format text online. It performs operations such as text to UpperCase, text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Extract Email Id and Links and many other operations."
     />
     <meta
       name="keywords"
-      content="Text to UpperCase, Text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Clear text,UpperCase,LowerCase,capitalize,decode,encode.reverse,extra space,clipboard,Email id"
+      content="Text to UpperCase, Text to LowerCase, clears the text, copies it to the clipboard, capitalizes each word, extracts only text, extracts only numbers, eliminates extra spaces, decodes Base64, converts Base64 to text, reverses the text,Clear text,UpperCase,LowerCase,capitalize,decode,encode.reverse,extra space,clipboard,Email id, Links, Extract Email Id, Extract Links"
     />
     <!-- To add Bootstrap CSS -->
     <link
@@ -26,7 +26,7 @@
     <link rel="manifest" href="site.webmanifest" />
     <script src="https://kit.fontawesome.com/38b4980054.js" crossorigin="anonymous"></script>
     <title>
-      Text-Utility-Pro - Word counter | Character counter | Email Extract | Download Text |Text
+      Text-Utility-Pro - Word counter | Character counter | Email Extract | Extract Links |Download Text |Text
       to UpperCase | Text to LowerCase | UpperCase to LowerCase | clipboard |
       Clear Text | Reverse Text | Extra Space | Extract numbers & text
     </title>
