--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="manifest" href="site.webmanifest" />
     <script src="https://kit.fontawesome.com/38b4980054.js" crossorigin="anonymous"></script>
     <title>
-      Text-Utility-Pro - Word counter| Extract Email & Links| Download text
+      textPlay.in - Word counter| Extract Email & Links| Download text
     </title>
   </head>
   <body>
