--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,8 @@
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="The Text-Utility-Pro tool helps you format text online. Converting text to uppercase or lowercase, reversing text, extracting emails, and extracting links are all possible."
-    />
-    <meta
-      name="keywords"
-      content="UpperCase,LowerCase,clipboard,text,number,reverse,Clear,Email,Link"
-    />
+    <meta name="description" content="TextPlay is an online text formatting tool that allows you to convert text, extract emails and links, and reverse text. Try it now!">
+   <meta name="keywords" content="TextPlay, UpperCase, LowerCase, clipboard, text, number, reverse, Clear, Email, Link">
     <!-- To add Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -25,9 +19,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
     <script src="https://kit.fontawesome.com/38b4980054.js" crossorigin="anonymous"></script>
-    <title>
-      TextPlay.in - Word counter| Extract Email & Links| Download text
-    </title>
+   <title>TextPlay - Online Text Formatting Tool | Convert Text, Extract Emails & Links</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
